# test

test-api/: .env  Cargo.toml
test-api/src/: main.rs  schema.rs
test-db/: .env  Cargo.toml  package.json
test-db/migrations/2024-05-13-132602_create_users/: up.sql
test-db/migrations/2024-05-16-132405_add_email_to_users/: down.sql  up.sql
test-db/src/: schema.rs
test-front/: .eslintrc.cjs  .prettierrc.json  package-lock.json  package.json
test-front/src/: App.tsx  Routes.tsx  main.tsx
test-front/src/apis/: useModel.ts  useUsers.ts
test-front/src/components/: UsersTable.tsx
test-front/src/containers/: UserList.tsx
test-front/src/pages/: MainPage.tsx
