[package]
name = "test-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"

diesel = { version = "2.1.6", features = ["postgres", "r2d2", "chrono"]}
serde = { version = "1.0", features = ["derive"]}
chrono = { version = "0.4.3", features = ["serde"] }

anyhow = "1.0.83"
dotenv = "0.15.0"
futures = "0.3.30"
serde_qs = "0.13.0"
